// Original file: proto/reservation.proto

import type { AppointmentInfo as _reservationPackage_AppointmentInfo, AppointmentInfo__Output as _reservationPackage_AppointmentInfo__Output } from '../reservationPackage/AppointmentInfo';

export interface GetPlumberAppointmentsResponse {
  'appointments'?: (_reservationPackage_AppointmentInfo)[];
}

export interface GetPlumberAppointmentsResponse__Output {
  'appointments'?: (_reservationPackage_AppointmentInfo__Output)[];
}
